deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-bootcamp
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-deployment
  template:
    metadata:
      labels:
        app: my-deployment
        version: v2
    spec:
      containers:
      - name: my-pod
        image: jocatalin/kubernetes-bootcamp:v2
        ports:
        - containerPort: 8080
