ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: kubernetes-bootcamp
          servicePort: 8080
